# fastapi_ml_pytest

./: .env  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml
db/: music.db
models/: TFidf.pkl  labelencoder.pkl  scaler.pkl  tfidf_cols.pkl  vect_cols.pkl  vect_pca.pkl
src/app/: crud.py  html.py  model_pred.py  schemas.py
src/tests/: conftest.py  test_get_genre.py
src/utils/: eda_helpers.py  helpers.py
